[project]
name = "median-bonus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "fastapi-jwt[authlib]>=0.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.45",
    "types-passlib>=1.7.7.20250602",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]

[tool.black]
line-length = 120
target-version = ["py313"]
skip-string-normalization = false

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true
exclude = [
    ".venv",
    "venv",
    ".idea",
    "migrations",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "F", # pyflakes (ошибки)
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "C4", # flake8-comprehensions
    "T20", # print / pprint
    "ARG", # unused arguments
]
ignore = [
    "E501", # line length — handled by Black
    "B008", # function call in argument defaults (часто валидно)
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
exclude = [
    "migrations",
    "tests/fixtures",
]

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
force_sort_within_sections = true
known_first_party = ["backend"]
